[package]
name = "ore-city"
version = "0.1.0"
edition = "2021"
# Musl static for 4.2MB binary; panic=abort in profile

[dependencies]
clap = { version = "4.5", features = ["derive"] }  # CLI entangle/mars/swarm
serde_yaml = "0.9"  # red-loop ingest
ed25519-dalek = "2.1"  # Base/hybrid signing
al-rusty-crystals-dilithium = "0.1"  # PQ branches (Neuralink entropy)
sha3 = "0.10"  # Robust leaf
blake3 = "1.5"  # Fast/parallel roots
rand = "0.8"  # Glyph curves/entropy
hex = "0.4"  # Proof export
once_cell = "1.19"  # Lazy DAG/swarm cache
rs-merkle = "0.3"  # Multi-proofs base
monotree = "0.2"  # Sparse radix for compact empire roots
jmt-blake3 = "0.1"  # BLAKE3 backend, prune empties

[features]
default = ["ed"]
ed = []
pq = ["al-rusty-crystals-dilithium"]
hybrid = ["ed", "pq"]

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
opt-level = "z"
