[package]
name = "ore-city"
version = "0.1.0"
edition = "2021"
description = "Ore City v∞ EMF / TCQ spectral spine"
repository = "https://github.com/northstaraokeystone/ore-city"

# Musl static for ~4.2MB binary; panic=abort in profile

[dependencies]
clap = { version = "4.5", features = ["derive"] }            # CLI entangle/mars/swarm
serde_yaml = "0.9"                                           # red-loop ingest
serde = { version = "1.0", features = ["derive"] }           # Claim/forest structs
ed25519-dalek = "2.1"                                        # Base/hybrid signing
pqcrypto-dilithium = { version = "0.5", optional = true }    # NIST PQ ML-DSA (Neuralink entropy, <50ms verify)
sha3 = "0.10"                                                # Robust leaf
blake3 = "1.5"                                               # Fast/parallel roots
rand = "0.8"                                                 # Glyph curves/entropy
hex = "0.4"                                                  # Proof export
once_cell = "1.19"                                           # Lazy DAG/swarm cache
rs_merkle = "1.5"                                            # Multi-proofs base (uncle/bridge proofs)
monotree = "0.2"                                             # Sparse radix for compact empire roots
jmt-blake3 = "0.1"                                           # BLAKE3 backend, prune empties

[features]
default = ["ed"]
ed = []                                                      # Classic Ed25519 signer
pq = ["pqcrypto-dilithium"]                                  # Pure PQ signer
hybrid = ["ed", "pq"]                                        # Hybrid Ed25519 + PQ fuse
rtq = []                                                     # Legacy feature flag; TCQ implemented in main.rs

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
opt-level = "z"
